refactor: update CORS configuration to use CorsConfigurationSource bean
- Removed WebMvcConfigurer implementation
- Replaced addCorsMappings method with a CorsConfigurationSource bean
- Expanded allowed headers for better compatibility with frontend requests
- Retained allowed origins and exposed headers